Fix text wrap problems

--- a/src/components/monitor/monitor.css
+++ b/src/components/monitor/monitor.css
@@ -148,6 +148,7 @@
     overflow: hidden; /* Don't let long values escape container */
     text-overflow: ellipsis;
     user-select: text; /* Allow selecting list values for 2.0 compatibility, only relevant in player */
+    white-space: nowrap;
 }
 
 .list-input {
